After adding search

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8090
+# server.port=4200
 spring.datasource.hikari.driver-class-name=org.h2.Driver
 spring.datasource.hikari.username=sa
 spring.datasource.hikari.password=sa
